[tool.poetry]
name = "blitztime-server"
version = "0.1.0"
description = "API server for Blitztime, a game timer for Polytopia."
authors = ["Artemis21 <artemisdev21@gmail.com>"]
license = "MIT"

[tool.poe.tasks]
serve = "sanic src.app"
docs = "sphinx-build docs/src docs/out"
lint = "flake8 ."

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.14.4"
sanic = "^21.3.2"
python-socketio = "^5.1.0"
pydantic = "^1.8.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-todo = "^0.7"
flake8-return = "^1.1.2"
flake8-datetimez = "^20.10.0"
flake8-functions = "^0.0.5"
flake8-commas = "^2.0.0"
flake8-continuation = "^1.0.5"
flake8-comprehensions = "^3.4.0"
flake8-quotes = "^3.2.0"
flake8-self = "^0.2.2"
flake8-raise = "^0.0.5"
flake8-simplify = "^0.14.0"
flake8-mutable = "^1.2.0"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.2"
poethepoet = "^0.10.0"
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
